--- a/dawazon2.0/Views/Shared/_Layout.cshtml
+++ b/dawazon2.0/Views/Shared/_Layout.cshtml
@@ -3,15 +3,16 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>@ViewData["Title"] - dawazon2._0</title>
+    <title>@ViewData["Title"] - dawazon2.0</title>
     <script type="importmap"></script>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
     <link rel="stylesheet" href="~/dawazon2._0.styles.css" asp-append-version="true"/>
 </head>
 <body>
 <header>
-    <nav class="navbar navbar-expand-sm navbar-toggleable-sm bg-black border-bottom box-shadow mb-3">
+    <nav class="navbar navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow mb-3">
         <div class="container">
             <div class="bg-custom-dark py-2">
                 <div class="d-flex align-items-center gap-2 gap-md-3">
@@ -34,7 +35,7 @@
                     </form>
             
                     @using System.Security.Claims
-
+                    
                     @* @if (User.Identity.IsAuthenticated) *@
                     {
                     <div class="d-flex align-items-center gap-3 ms-1">
@@ -150,7 +151,7 @@
     </main>
 </div>
 
-<footer class="bg-custom-secondary bg-dark text-light mt-5">
+<footer class="text-light mt-5">
     <div class="container-fluid py-4 px-5">
         <div class="row text-light small border border-light">
             <div class="col-12 col-md-4 mb-4 mb-md-0 border border-light" id="contacto">
@@ -182,7 +183,7 @@
         </div>
     </div>
 
-    <div class="bg-custom-dark text-center py-3 border-top border-secondary">
+    <div class="text-center py-3 border-top border-secondary">
         <div class="container">
             <div class="d-flex justify-content-center align-items-center gap-2">
                 <img src="~/Dawazon.png" style="width: 25px; filter: grayscale(1) brightness(2);" alt="Logo">
