Carrito y checkout terminados.Admin puede cambiar roles ahora. Login corregido.

--- a/dawazon2.0/Views/AdminMvc/UserDetail.cshtml
+++ b/dawazon2.0/Views/AdminMvc/UserDetail.cshtml
@@ -21,7 +21,7 @@
         <div style="background: linear-gradient(135deg, #001f5b 0%, #003087 100%); height: 80px;"></div>
 
         <div class="card-body px-4 pb-4 pt-0 text-center">
-            <img src="~/img/defaultImg.png"
+            <img src="@u.Avatar"
                  alt="Avatar"
                  class="rounded-circle border border-4 border-white shadow"
                  style="width: 90px; height: 90px; object-fit: cover; margin-top: -45px;">
