--- a/dawazon2.0/Views/AdminMvc/Users.cshtml
+++ b/dawazon2.0/Views/AdminMvc/Users.cshtml
@@ -41,7 +41,7 @@
                             <tr>
                                 <td>
                                     <div class="d-flex align-items-center gap-2">
-                                        <img src="~/img/defaultImg.png" alt="avatar"
+                                        <img src="@user.Avatar" alt="avatar"
                                              class="rounded-circle"
                                              style="width: 38px; height: 38px; object-fit: cover;">
                                         <div>
