--- a/dawazon2.0/Pages/Auth/Login.cshtml
+++ b/dawazon2.0/Pages/Auth/Login.cshtml
@@ -12,7 +12,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
 
-    <link href="/Dawazon.ico" rel="icon" type="image/x-icon">
+    <link href="/favicon.ico" rel="icon" type="image/x-icon">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
@@ -39,7 +39,7 @@
 
 <header>
     <a class="logo-container" href="/">
-        <img src="/Dawazon.png" alt="Logo" style="width: 50px; height: 50px;">
+        <img class="rounded-circle" src="/Dawazon.png" alt="Logo" style="width: 50px; height: 50px;">
         <span>Dawazon</span>
     </a>
 </header>
