Dashboard de stats de administrador

--- a/dawazon2.0/Views/Shared/_Layout.cshtml
+++ b/dawazon2.0/Views/Shared/_Layout.cshtml
@@ -117,6 +117,7 @@
                     <span class="small fw-bold border-end pe-2">Panel Admin:</span>
                     <a class="nav-link text-white small p-0" href="/admin/usuarios">Usuarios</a>
                     <a class="nav-link text-white small p-0" href="/admin/ventas">Ventas y envíos</a>
+                    <a class="nav-link text-white small p-0" href="/admin/estadisticas">Estadísticas</a>
                 </nav>
             </div>
         }
