--- a/dawazon2.0/Views/CartMvc/Checkout.cshtml
+++ b/dawazon2.0/Views/CartMvc/Checkout.cshtml
@@ -20,6 +20,23 @@
                 </div>
             }
 
+            @{
+                var globalErrors = ViewData.ModelState
+                    .Where(e => e.Key == string.Empty && e.Value?.Errors.Count > 0)
+                    .SelectMany(e => e.Value!.Errors.Select(err => err.ErrorMessage))
+                    .ToList();
+            }
+            @if (globalErrors.Any())
+            {
+                <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                    @foreach (var err in globalErrors)
+                    {
+                        <div>@err</div>
+                    }
+                    <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+                </div>
+            }
+
             <form asp-action="Checkout" method="post">
                 @Html.AntiForgeryToken()
                 <input type="hidden" asp-for="CartId" />
